Testing ability to commit and push

--- a/breg_surv.tex
+++ b/breg_surv.tex
@@ -15,7 +15,7 @@
 \newcommand{\N}{\mathcal{N}}
 
 \title{Fundamentals of Bregman Divergences}
-
+\author{Lawrence Cayton \and Suresh Venkatasubramanian}
 \begin{document}
 \maketitle
 
