Refactored and added new stubs for work on axiomatic considerations and information geometry

--- a/breg_surv.tex
+++ b/breg_surv.tex
@@ -1,4 +1,5 @@
 \documentclass{article}
+\usepackage{geometry}
 \usepackage{amsthm, amsmath, amssymb}
 \usepackage{graphicx}
 \usepackage{rotating}
@@ -232,6 +233,11 @@ is a related bregman divergence.  In \cite{bm.05}, it is shown that
 there is a one-to-one correspondence between the regular exponential
 families and the so-called regular bregman divergences---bregman
 divergences defined over a restricted class of convex base functions.  
+
+\subsection{An Axiomatic Viewpoint}
+\input axioms
+\subsection{Information Geometry}
+\input infogeom
 
 \section{Geometry}
 \subsection{Pythagorean theorem}
