re-org and added examples

--- a/biblio.bib
+++ b/biblio.bib
@@ -58,6 +58,19 @@ the exponential family of distributions},
   OPTannote = 	 {}
 }
 
+
+
+@Misc{d.2005,
+  OPTkey = 	 {},
+  author = 	 {Sanjoy Dasgupta},
+  title = 	 {Lectures on Unsupervised Learning},
+  OPThowpublished = {},
+  OPTmonth = 	 {},
+  year = 	 {2005},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
 @InProceedings{gim.07,
   author = 	 {Sudipto Guha and Piotr Indyk and Andrew McGregor},
   title = 	 {Sketching Information Divergences},
